<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/purple_500">

    <Spinner
        android:id="@+id/jointName"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="70dp"
        android:background="@color/white" />

    <EditText
        android:id="@+id/totalSquare"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="100dp"
        android:background="@color/white"
        android:hint="@string/hint_total_square"
        android:inputType="number" />

    <EditText
        android:id="@+id/tileHeight"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_tile_height"
        android:layout_marginLeft="100dp"
        android:background="@color/white"
        android:inputType="number" />

    <EditText
        android:id="@+id/tileWidth"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_tile_width"
        android:layout_marginLeft="100dp"
        android:background="@color/white"
        android:inputType="number" />

    <EditText
        android:id="@+id/jointWidth"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_joint_width"
        android:layout_marginLeft="100dp"
        android:background="@color/white"
        android:inputType="number" />

    <EditText
        android:id="@+id/jointHeight"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_joint_height"
        android:layout_marginLeft="100dp"
        android:background="@color/white"
        android:inputType="number" />


    <TextView
        android:id="@+id/jointAmount"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:textSize="30dp"
        android:textColor="@color/teal_700"
        android:layout_marginTop="60dp"
        android:hint="@string/hint_joint_amount"
        android:layout_marginLeft="100dp"
        android:background="@color/white"
        />
</LinearLayout>